--- a/mm/templates/forex.html
+++ b/mm/templates/forex.html
@@ -82,6 +82,20 @@ The other important expression that you must take into consideration is “the m
       </div>
     </div>
   </section>
+  <section class="payment">
+    <div class="container">
+      <div class="payment__flex">
+        <div class="payment__box  payment__box--wm"></div>
+        <div class="payment__box  payment__box--sofort"></div>
+        <div class="payment__box  payment__box--ae"></div>
+        <div class="payment__box  payment__box--neteller"></div>
+        <div class="payment__box  payment__box--ideal"></div>
+        <div class="payment__box  payment__box--skrill"></div>
+        <div class="payment__box  payment__box--visa"></div>
+        <div class="payment__box  payment__box--master"></div>
+      </div>
+    </div>
+  </section>
   <footer class="footer">
     <div class="container">
       <div class="footer__flex">
