--- a/mm/templates/privacy.html
+++ b/mm/templates/privacy.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="temp  temp--info">
+  <section class="temp  temp--info  temp--gray">
     <header class="header  header--temp">
       <div class="container">
         <nav class="main-nav">
@@ -95,6 +95,20 @@
         <b class="info__title">Registered Address:</b>
         <p>Company name: VACENTY FINANCE LIMITED<br>Address: Trust Company Complex , Ajeltake Road, Majuro, Marshall Islands MH96960</p>
         <p>Phone: 442038290032<br>Email: info@MultiplyMarket.com</p>
+      </div>
+    </div>
+  </section>
+  <section class="payment">
+    <div class="container">
+      <div class="payment__flex">
+        <div class="payment__box  payment__box--wm"></div>
+        <div class="payment__box  payment__box--sofort"></div>
+        <div class="payment__box  payment__box--ae"></div>
+        <div class="payment__box  payment__box--neteller"></div>
+        <div class="payment__box  payment__box--ideal"></div>
+        <div class="payment__box  payment__box--skrill"></div>
+        <div class="payment__box  payment__box--visa"></div>
+        <div class="payment__box  payment__box--master"></div>
       </div>
     </div>
   </section>
