--- a/mm/templates/terms.html
+++ b/mm/templates/terms.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="temp  temp--info">
+  <section class="temp  temp--info  temp--gray">
     <header class="header  header--temp">
       <div class="container">
         <nav class="main-nav">
@@ -196,6 +196,20 @@
         <b>Procedure for returning funds</b>
           <p>If there is a situation where the user`s funds should be returned, the money will be transferred to his account in two working days. Depending on the method used for transferring the money, the time it takes for the process to be completed might vary. Each refund application will be reviewed and confirmed by MultiplyMarket after the user presents the proper documentation. MultiplyMarket will do what it can do offer assistance and resolve the issue.</p>
           <p>Company name: VACENTY FINANCE LIMITED<br>Address: Marshall Islands Trust Company Complex, Ajelatake Road, Ajelatake Island, Majuro. Marshall Islands, MH96960</p>
+      </div>
+    </div>
+  </section>
+  <section class="payment">
+    <div class="container">
+      <div class="payment__flex">
+        <div class="payment__box  payment__box--wm"></div>
+        <div class="payment__box  payment__box--sofort"></div>
+        <div class="payment__box  payment__box--ae"></div>
+        <div class="payment__box  payment__box--neteller"></div>
+        <div class="payment__box  payment__box--ideal"></div>
+        <div class="payment__box  payment__box--skrill"></div>
+        <div class="payment__box  payment__box--visa"></div>
+        <div class="payment__box  payment__box--master"></div>
       </div>
     </div>
   </section>
