--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -163,6 +163,20 @@
       <p>Once we approve and authorize your application, you will make your payments and withdraws suddenly.</p>
     </div>
   </section>
+  <section class="payment">
+    <div class="container">
+      <div class="payment__flex">
+        <div class="payment__box  payment__box--wm"></div>
+        <div class="payment__box  payment__box--sofort"></div>
+        <div class="payment__box  payment__box--ae"></div>
+        <div class="payment__box  payment__box--neteller"></div>
+        <div class="payment__box  payment__box--ideal"></div>
+        <div class="payment__box  payment__box--skrill"></div>
+        <div class="payment__box  payment__box--visa"></div>
+        <div class="payment__box  payment__box--master"></div>
+      </div>
+    </div>
+  </section>
   <footer class="footer">
     <div class="container">
       <div class="footer__flex">
