--- a/mm/templates/forex.html
+++ b/mm/templates/forex.html
@@ -109,7 +109,7 @@ The other important expression that you must take into consideration is “the m
           <li><a href="about.html">About Us</a></li>
           <li><a href="careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
           <li><a href="security.html">Security</a></li>
         </ul>
         <ul>
