--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -1027,8 +1027,7 @@ body {
     width: auto; } }
 
 .register {
-  background: #646464 url("../img/t-bg-2.png") no-repeat top;
-  background-size: cover; }
+  background: #212121; }
   .register h1 {
     margin-top: 50px;
     margin-bottom: 0;
@@ -1059,7 +1058,6 @@ body {
   padding-bottom: 70px; }
 
 .register__left {
-  width: 500px;
   margin: auto;
   padding-bottom: 50px; }
 
@@ -1090,37 +1088,52 @@ body {
   .register__right {
     width: auto; } }
 
-.form input {
-  height: 25px;
-  color: #fff;
-  padding: 5px 20px;
-  font-size: 16px;
-  border-radius: 50px;
-  border: 2px solid #fff;
-  background: transparent;
-  outline: none; }
-
-.form input[type="date"] {
-  width: auto; }
-
-.form input:focus {
-  border: 2px solid #eeba1d; }
-
-.form input::-webkit-input-placeholder {
-  color: #fff;
-  opacity: 0.8; }
-
-.form input:-ms-input-placeholder {
-  color: #fff;
-  opacity: 0.8; }
-
-.form input::-ms-input-placeholder {
-  color: #fff;
-  opacity: 0.8; }
-
-.form input::placeholder {
-  color: #fff;
-  opacity: 0.8; }
+.form {
+  width: 700px; }
+  .form input {
+    width: 165px;
+    height: 25px;
+    color: #fff;
+    padding: 5px 20px;
+    font-size: 16px;
+    border-radius: 50px;
+    border: 2px solid #fff;
+    background: transparent;
+    outline: none; }
+    .form input:focus {
+      border: 2px solid #eeba1d; }
+  .form select {
+    padding: 5px 20px;
+    color: #fff;
+    font-size: inherit;
+    border: 2px solid #fff;
+    border-radius: 50px;
+    background: transparent;
+    outline: none; }
+    .form select:focus {
+      border: 2px solid #eeba1d; }
+    .form select option {
+      background: #212121; }
+  .form input::-webkit-input-placeholder {
+    color: #fff;
+    opacity: 0.8; }
+  .form input:-ms-input-placeholder {
+    color: #fff;
+    opacity: 0.8; }
+  .form input::-ms-input-placeholder {
+    color: #fff;
+    opacity: 0.8; }
+  .form input::placeholder {
+    color: #fff;
+    opacity: 0.8; }
+  .form small {
+    display: block;
+    width: 400px;
+    margin: auto;
+    margin-top: 10px;
+    color: #fff;
+    font-family: 'SF UI Display Regular', sans-serif;
+    text-align: center; }
 
 .form__flex {
   display: -webkit-box;
@@ -1130,6 +1143,17 @@ body {
   -ms-flex-pack: justify;
   justify-content: space-between;
   margin-bottom: 20px; }
+
+.form__flex--around {
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  height: 39px; }
+
+.form__country,
+.form__title,
+.form__nature,
+.form__leverage {
+  width: 210px; }
 
 @media screen and (max-width: 768px) {
   .form p {
