--- a/mm/sass/blocks/register.scss
+++ b/mm/sass/blocks/register.scss
@@ -1,6 +1,5 @@
 .register {
-  background: #646464 url('../img/t-bg-2.png') no-repeat top;
-  background-size: cover;
+  background: #212121;
   
   h1 {
     margin-top: 50px;
@@ -29,7 +28,7 @@
 }
 
 .register__left {
-  width: 500px;
+  // width: 500px;
   margin: auto;
   padding-bottom: 50px;
 }
