--- a/mm/templates/commodities.html
+++ b/mm/templates/commodities.html
@@ -100,7 +100,7 @@
         </ul>
         <ul>
           <b>About Us</b>
-          <li><a class="footer__active">About Us</a></li>
+          <li><a href="about.html">About Us</a></li>
           <li><a href="careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
           <li><a href="contact.html">Contact</a></li>
