--- a/mm/templates/indices.html
+++ b/mm/templates/indices.html
@@ -86,7 +86,7 @@
           <li><a class="footer__active">About Us</a></li>
           <li><a href="careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
           <li><a href="security.html">Security</a></li>
         </ul>
         <ul>
