--- a/mm/templates/security.html
+++ b/mm/templates/security.html
@@ -120,7 +120,7 @@
           <li><a href="about.html">About Us</a></li>
           <li><a href="careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
           <li><a class="footer__active">Security</a></li>
         </ul>
         <ul>
