--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -1092,9 +1092,8 @@ body {
   width: 700px; }
   .form input {
     width: 165px;
-    height: 25px;
     color: #fff;
-    padding: 5px 20px;
+    padding: 10px 20px;
     font-size: 16px;
     border-radius: 50px;
     border: 2px solid #fff;
@@ -1103,7 +1102,7 @@ body {
     .form input:focus {
       border: 2px solid #eeba1d; }
   .form select {
-    padding: 5px 20px;
+    padding: 10px 20px;
     color: #fff;
     font-size: inherit;
     border: 2px solid #fff;
@@ -1146,8 +1145,7 @@ body {
 
 .form__flex--around {
   -ms-flex-pack: distribute;
-  justify-content: space-around;
-  height: 39px; }
+  justify-content: space-around; }
 
 .form__country,
 .form__title,
@@ -1156,16 +1154,27 @@ body {
   width: 210px; }
 
 @media screen and (max-width: 768px) {
-  .form p {
-    text-align: center; }
+  .form {
+    width: auto; }
+    .form p {
+      text-align: center; }
+    .form small {
+      width: auto; }
+  .form__country,
+  .form__title,
+  .form__nature,
+  .form__leverage {
+    width: auto; }
   .form__flex {
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center; }
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
     .form__flex input {
-      margin-bottom: 10px; } }
+      width: auto;
+      margin-bottom: 20px; }
+    .form__flex select {
+      margin-bottom: 20px; } }
 
 .segregated {
   background: #646464 url("../img/a-bg.png") no-repeat top;
