--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -1101,6 +1101,8 @@ body {
     outline: none; }
     .form input:focus {
       border: 2px solid #eeba1d; }
+  .form input[type="date"] {
+    padding: 8px 20px; }
   .form select {
     padding: 10px 20px;
     color: #fff;
@@ -1156,6 +1158,11 @@ body {
 @media screen and (max-width: 768px) {
   .form {
     width: auto; }
+    .form input {
+      width: auto;
+      margin-bottom: 20px; }
+    .form select {
+      margin-bottom: 20px; }
     .form p {
       text-align: center; }
     .form small {
@@ -1169,12 +1176,7 @@ body {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
-    flex-direction: column; }
-    .form__flex input {
-      width: auto;
-      margin-bottom: 20px; }
-    .form__flex select {
-      margin-bottom: 20px; } }
+    flex-direction: column; } }
 
 .segregated {
   background: #646464 url("../img/a-bg.png") no-repeat top;
