--- a/mm/templates/forex.html
+++ b/mm/templates/forex.html
@@ -93,6 +93,7 @@ The other important expression that you must take into consideration is “the m
         <div class="payment__box  payment__box--skrill"></div>
         <div class="payment__box  payment__box--visa"></div>
         <div class="payment__box  payment__box--master"></div>
+        <div class="payment__box  payment__box--bank"></div>
       </div>
     </div>
   </section>
