--- a/mm/templates/indices.html
+++ b/mm/templates/indices.html
@@ -70,6 +70,7 @@
         <div class="payment__box  payment__box--skrill"></div>
         <div class="payment__box  payment__box--visa"></div>
         <div class="payment__box  payment__box--master"></div>
+        <div class="payment__box  payment__box--bank"></div>
       </div>
     </div>
   </section>
