--- a/mm/templates/login.html
+++ b/mm/templates/login.html
@@ -83,8 +83,8 @@
       <div class="footer__flex">
         <ul>
           <b>Account</b>
-          <li><a href="#">Log In</a></li>
-          <li><a class="footer__active">Sign Up</a></li>
+          <li><a class="footer__active">Log In</a></li>
+          <li><a href="register.html">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
