--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -17,7 +17,7 @@
           </a>
           <div class="main-nav__user  main-nav__user--temp">
             <a class="button" href="register.html">Open live account</a>
-            <a class="button  button--black" href="#">Log In</a>
+            <a class="button  button--black" href="login.html">Log In</a>
             <a class="button  button--number" href="tel:+442038290032">442038290032</a>
           </div>
         </nav>
