--- a/aff/sass/style.scss
+++ b/aff/sass/style.scss
@@ -1,5 +1,8 @@
+@import "variables";
 @import "global/base";
 
 @import "blocks/header";
 @import "blocks/main-nav";
 @import "blocks/title";
+@import "blocks/breadcrumb";
+@import "blocks/control";
