--- a/aff/sass/blocks/control.scss
+++ b/aff/sass/blocks/control.scss
@@ -29,7 +29,8 @@
   a {
     display: block;
     color: #292929;
-    padding: 10px 17px;
+    padding: 8px 13px;
+    font-size: 14px;
     text-decoration: none;
     transition: 0.2s;
     
