--- a/aff/css/style.css
+++ b/aff/css/style.css
@@ -121,10 +121,66 @@ body {
   .control__pagination a {
     display: block;
     color: #292929;
-    padding: 10px 17px;
+    padding: 8px 13px;
+    font-size: 14px;
     text-decoration: none;
     -webkit-transition: 0.2s;
     transition: 0.2s; }
     .control__pagination a:hover {
       color: #fff;
       background: #292929; }
+
+.news__card {
+  padding: 50px 0; }
+  .news__card--nth {
+    background: #f7f7f7; }
+
+.news__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.news__left {
+  width: 490px;
+  color: #3f2900;
+  font-size: 13px;
+  font-weight: 300; }
+  .news__left p {
+    margin-top: 0; }
+
+.news__preview {
+  width: 490px;
+  height: 260px;
+  margin-top: 30px;
+  background: url("../img/blog-preview.png") no-repeat; }
+
+.news__right {
+  width: 600px;
+  color: #5b481f;
+  font-size: 14px;
+  font-weight: 300; }
+  .news__right h1 {
+    margin-top: 0;
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: uppercase; }
+
+.news__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-top: 46px; }
+
+.news__more {
+  color: #000;
+  padding: 7px 60px;
+  font-size: 14px;
+  text-decoration: none;
+  border: 1px solid #ffd117;
+  border-radius: 3px; }
