--- a/aff/sass/blocks/control.scss
+++ b/aff/sass/blocks/control.scss
@@ -45,3 +45,27 @@
     }
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .control__flex {
+    flex-direction: column;
+  }
+  
+  .control__left {
+    margin-bottom: 20px;
+    
+    select {
+      width: auto;
+    }
+  }
+  
+  .control__pagination {
+    
+    &--right {
+      margin: auto;
+      margin-bottom: 50px;
+    }
+  }
+}
