--- a/aff/sass/blocks/header.scss
+++ b/aff/sass/blocks/header.scss
@@ -8,3 +8,18 @@
   align-items: center;
   padding: 30px 0;
 }
+
+@media screen and ($tablet-widths) {
+  .header__flex {
+    
+    img {
+      width: 150px;
+    }
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .header__flex {
+    flex-direction: column;
+  }
+}
