--- a/aff/sass/global/base.scss
+++ b/aff/sass/global/base.scss
@@ -8,3 +8,11 @@ body {
   width: 1160px;
   margin: auto;
 }
+
+@media screen and ($tablet-widths) {
+  .container {
+    width: 95%;
+  }
+}
+
+@media screen and ($mobile-widths) {}
