--- a/aff/sass/style.scss
+++ b/aff/sass/style.scss
@@ -8,3 +8,7 @@
 @import "blocks/control";
 @import "blocks/news";
 @import "blocks/footer";
+
+@import "blocks/blog";
+@import "blocks/hr";
+@import "blocks/comments";
