--- a/aff/sass/blocks/news.scss
+++ b/aff/sass/blocks/news.scss
@@ -165,4 +165,11 @@
       text-align: center;
     }
   }
+  
+  .news__social--blog,
+  .news__social--blog-down {
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 }
