--- a/aff/css/style.css
+++ b/aff/css/style.css
@@ -424,7 +424,12 @@ body {
   .news__right {
     margin-top: 20px; }
     .news__right h1 {
-      text-align: center; } }
+      text-align: center; }
+  .news__social--blog,
+  .news__social--blog-down {
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px; } }
 
 .footer {
   background: #292929; }
@@ -565,6 +570,33 @@ body {
     font-size: 24px;
     text-transform: uppercase; }
 
+@media screen and (max-width: 1200px) {
+  .blog__img {
+    width: 50%; } }
+
+@media screen and (max-width: 768px) {
+  .blog__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .blog__img {
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1;
+    width: 100%; }
+  .blog__right {
+    margin-left: 0; }
+    .blog__right h1, .blog__right p {
+      text-align: center; }
+    .blog__right .blog__link {
+      display: block;
+      width: 50px;
+      margin: auto;
+      text-align: center; }
+  .blog__content {
+    text-align: center; } }
+
 .hr {
   width: 58px;
   height: 2px;
@@ -574,6 +606,12 @@ body {
   .hr--s {
     width: 30px;
     height: 1px; }
+
+@media screen and (max-width: 768px) {
+  .hr {
+    margin: auto; }
+    .hr--s {
+      display: none; } }
 
 .comments {
   padding: 30px 0;
@@ -624,6 +662,17 @@ body {
 .comments__text {
   color: #3f2900;
   font-size: 15px; }
+
+@media screen and (max-width: 768px) {
+  .comments__count {
+    text-align: center; }
+  .comments__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .comments__right {
+    width: auto; } }
 
 .form {
   padding: 30px 0; }
@@ -700,6 +749,26 @@ body {
     color: #726c6c;
     font-size: 14px; }
 
+@media screen and (max-width: 1200px) {
+  .form__comment {
+    width: 50%; } }
+
+@media screen and (max-width: 768px) {
+  .form h1 {
+    text-align: center; }
+  .form__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .form__left input {
+    width: auto; }
+  .form__send {
+    margin: auto;
+    margin-bottom: 10px; }
+  .form__comment {
+    width: auto; } }
+
 .similar {
   padding: 30px 0;
   background: #f7f7f7; }
@@ -719,7 +788,9 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
 
 .similar__box {
   width: 270px;
@@ -729,3 +800,8 @@ body {
     font-size: 11px; }
   .similar__box b {
     font-size: 13px; }
+
+@media screen and (max-width: 768px) {
+  .similar__flex {
+    -ms-flex-pack: distribute;
+    justify-content: space-around; } }
